fix displaying long user names in /messages (nowrap)

--- a/src/app/messages/messages.component.scss
+++ b/src/app/messages/messages.component.scss
@@ -46,6 +46,8 @@ a {
   }
 
   width: 128px;
+  overflow: hidden;
+  white-space: nowrap;
   flex: none;
   -webkit-flex: none;
 }
